# ember-django-example

./: README.md  docker-compose.yml
.github/workflows/: backend-lint-test.yml  cypress.yml  frontend-lint-test.yml
acceptance-tests/: README.md  package-lock.json  package.json
acceptance-tests/cypress/integration/: first_test.js  sample_spec.js
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  initial-data.json  pyproject.toml
backend/api/: admin.py
backend/api/migrations/: 0001_initial.py  0002_alter_rental_category.py
backend/api/models/: __init__.py  location.py  rental.py
backend/api/serializers/: location.py  rental.py
backend/api/tests/factories/: location.py  rental.py  rental_factory.py
backend/api/tests/models/: __init__.py  location_tests.py  rental_tests.py
backend/api/tests/views/: rental_tests.py
backend/api/views/: rental.py
backend/backend/: settings.py  urls.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  testem.js
frontend/app/adapters/: application.js
frontend/app/components/: map.js  rental.hbs  rentals.hbs
frontend/app/components/rental/: image.js
frontend/app/serializers/: application.js
frontend/app/styles/: app.css
frontend/config/: environment.js
frontend/mirage/: config.js
frontend/mirage/factories/: rental.js
frontend/tests/acceptance/: super-rentals-test.js
frontend/tests/integration/components/: map-test.js  rental-test.js  rentals-test.js  share-button-test.js
frontend/tests/integration/components/rental/: detailed-test.js  image-test.js
